@@ -1,8 +1,6 @@
 local _ENV = mkmodule('plugins.sort')
 
-local info = require('plugins.sort.info')
 local gui = require('gui')
-local locationselector = require('plugins.sort.locationselector')
 local overlay = require('plugins.overlay')
 local setbelief = reqscript('modtools/set-belief')
 local textures = require('gui.textures')
@@ -1287,9 +1285,10 @@ end
 OVERLAY_WIDGETS = {
     squad_assignment=SquadAssignmentOverlay,
     squad_annotation=SquadAnnotationOverlay,
-    info=info.InfoOverlay,
-    interrogation=info.InterrogationOverlay,
-    location_selector=locationselector.LocationSelectorOverlay,
+    info=require('plugins.sort.info').InfoOverlay,
+    interrogation=require('plugins.sort.info').InterrogationOverlay,
+    location_selector=require('plugins.sort.locationselector').LocationSelectorOverlay,
+    burrows=require('plugins.sort.burrows').BurrowOverlay,
 }
 
 dfhack.onStateChange[GLOBAL_KEY] = function(sc)
